# bible_study_app

./: Cargo.toml  LICENSE  README.md
assets/: test.genesis_kjv.md  test_bible.cjb  test_genesis_kjv.md
crates/app/: Cargo.toml
crates/app/src/: data.rs  gui.rs  main.rs  parsing.rs
crates/app/src/gui/: chapter_ui.rs  mod.rs  note_ui.rs
crates/bible_builder/: Cargo.toml
crates/bible_builder/src/: cmd.txt  main.rs  md_parsing.rs
crates/bible_file_format/: Cargo.toml
crates/bible_file_format/src/: bible.rs  lib.rs  notes.rs
info/: file_format.md  sources.md
src/: bible.rs  main.rs
src/bible/: mod.rs  parsing.rs  view.rs
src/gui/: mod.rs
