[package]
name = "bible_file_format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniz_oxide = "0.7.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
